parser/src/parser/expressions/snapshots/test__parser::expressions::binary::test::parse_wrapped_bin_expr_literal.snap
---
created: "2020-05-02T10:11:44.212103Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/binary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 24)
  FN_DEF@[0; 24)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 24)
      BLOCK@[10; 24)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 23)
          BIN_EXPR@[11; 22)
            BIN_EXPR@[11; 18)
              LITERAL@[11; 14)
                FLOAT_NUMBER@[11; 14) "1.0"
              PLUS@[14; 15) "+"
              LITERAL@[15; 18)
                FLOAT_NUMBER@[15; 18) "2.0"
            PLUS@[18; 19) "+"
            LITERAL@[19; 22)
              FLOAT_NUMBER@[19; 22) "2.0"
          SEMI@[22; 23) ";"
        R_CURLY@[23; 24) "}"

