parser/src/parser/expressions/snapshots/test__parser::expressions::call_expr::test::parse_call_no_args_expr.snap
---
created: "2020-05-02T10:11:44.223572Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 16)
  FN_DEF@[0; 16)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 16)
      BLOCK@[10; 16)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 15)
          CALL_EXPR@[11; 14)
            IDENT_EXPR@[11; 12)
              NAME@[11; 12)
                IDENT@[11; 12) "a"
            ARG_LIST@[12; 14)
              L_PAREN@[12; 13) "("
              R_PAREN@[13; 14) ")"
          SEMI@[14; 15) ";"
        R_CURLY@[15; 16) "}"

